@@ -4410,8 +4410,7 @@ static SDL_INLINE bool checkWarp(Warp_t &warp, int B, Player_t &plr, int A, bool
 {
     bool canWarp = false;
 
-    bool onGround = (!g_compatibility.require_ground_to_enter_warps && !warp.stoodRequired) ||
-                    (plr.Pinched1 == 2 || plr.Slope != 0 || plr.StandingOnNPC != 0);
+    bool onGround = !warp.stoodRequired || (plr.Pinched1 == 2 || plr.Slope != 0 || plr.StandingOnNPC != 0);
 
     auto &entrance      = backward ? warp.Exit        : warp.Entrance;
     auto &exit          = backward ? warp.Entrance    : warp.Exit;
